Succesfully redirected to Welcome Page

--- a/djoauth/templates/page.html
+++ b/djoauth/templates/page.html
@@ -9,11 +9,13 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
         <h1>Welcome to the Page</h1>
-        <a href="{% url 'initiate_oauth' %}">Login with Salesforce</a>
-        <script src="" async defer></script>
+        <!-- <a href="{% url 'initiate_oauth' %}">Login with Salesforce</a> -->
+        <button id="salesforce-login">Login with Salesforce</button>
+        <script>
+            document.getElementById('salesforce-login').addEventListener('click', function() {
+                window.location.href = "{% url 'initiate_oauth' %}";
+            });
+        </script>
     </body>
 </html>
