--- a/djoauth/templates/welcome.html
+++ b/djoauth/templates/welcome.html
@@ -12,7 +12,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Welcome</h1>
+        <h1>Welcome to Mavlon</h1>
         <script src="" async defer></script>
     </body>
 </html>
